syntax = "proto3";
import "athenaapis/structures.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/athena-intelli/athena/api/pb/securityService;securityService";
option java_multiple_files = true;
option java_package = "com.athena.api.service";

package SecurityService;

service SecurityService{

  // user login
  rpc Login(UsernameAndPasswordToken) returns (LoginResponse){}

  // user logout
  rpc Logout(UsernameAndPasswordToken) returns (google.protobuf.Empty){}

  // change user password
  rpc ChangePassword(ChangePasswordRequest) returns(google.protobuf.Empty){}

}

message LoginResponse{
  structures.DUser user = 1;
  string access_token = 2;
}

message ChangePasswordRequest{
  string user_name = 1;
  string old_password = 2;
  string new_password = 3;
  string comment = 4;
  google.protobuf.Timestamp transaction_time = 5;
}

message AuthenticateUserRequest{
  string username = 1;
  string password = 2;
}

message UsernameAndPasswordToken{
  string username = 1;
  string password = 2;
}